err/diffpy.structure.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CifFile'...
Listing './lib/python3.5/site-packages/CifFile/drel'...
Listing './lib/python3.5/site-packages/PyCifRW-4.3.egg-info'...
Listing './lib/python3.5/site-packages/diffpy'...
Listing './lib/python3.5/site-packages/diffpy/Structure'...
Listing './lib/python3.5/site-packages/diffpy/Structure/Parsers'...
Compiling './lib/python3.5/site-packages/diffpy/Structure/Parsers/P_auto.py'...
***   File "./lib/python3.5/site-packages/diffpy/Structure/Parsers/P_auto.py", line 113
    except StructureFormatError, err:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diffpy/Structure/Parsers/P_cif.py'...
***   File "./lib/python3.5/site-packages/diffpy/Structure/Parsers/P_cif.py", line 305
    except (StarError, ValueError, IndexError), err:
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diffpy/Structure/Parsers/P_discus.py'...
***   File "./lib/python3.5/site-packages/diffpy/Structure/Parsers/P_discus.py", line 97
    raise StructureFormatError, emsg, exc_traceback
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diffpy/Structure/Parsers/P_pdb.py'...
***   File "./lib/python3.5/site-packages/diffpy/Structure/Parsers/P_pdb.py", line 178
    raise StructureFormatError, emsg, exc_traceback
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diffpy/Structure/Parsers/P_pdffit.py'...
***   File "./lib/python3.5/site-packages/diffpy/Structure/Parsers/P_pdffit.py", line 157
    raise StructureFormatError, emsg, exc_traceback
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diffpy/Structure/Parsers/P_rawxyz.py'...
***   File "./lib/python3.5/site-packages/diffpy/Structure/Parsers/P_rawxyz.py", line 83
    raise StructureFormatError, emsg
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diffpy/Structure/Parsers/P_xcfg.py'...
***   File "./lib/python3.5/site-packages/diffpy/Structure/Parsers/P_xcfg.py", line 269
    raise StructureFormatError, emsg, exc_traceback
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diffpy/Structure/Parsers/P_xyz.py'...
***   File "./lib/python3.5/site-packages/diffpy/Structure/Parsers/P_xyz.py", line 68
    raise StructureFormatError, emsg, exc_traceback
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diffpy/Structure/Parsers/structureparser.py'...
***   File "./lib/python3.5/site-packages/diffpy/Structure/Parsers/structureparser.py", line 38
    raise NotImplementedError, \
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/diffpy/Structure/SymmetryUtilities.py'...
***   File "./lib/python3.5/site-packages/diffpy/Structure/SymmetryUtilities.py", line 882
    print "g = GeneratorSite(sg100, %r)" % site
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/diffpy/Structure/applications'...
Compiling './lib/python3.5/site-packages/diffpy/Structure/applications/anyeye.py'...
***   File "./lib/python3.5/site-packages/diffpy/Structure/applications/anyeye.py", line 62
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/diffpy/Structure/applications/transtru.py'...
***   File "./lib/python3.5/site-packages/diffpy/Structure/applications/transtru.py", line 50
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/diffpy/Structure/expansion'...
Compiling './lib/python3.5/site-packages/diffpy/Structure/expansion/supercell_mod.py'...
***   File "./lib/python3.5/site-packages/diffpy/Structure/expansion/supercell_mod.py", line 41
    raise ValueError, emsg
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/diffpy/Structure/tests'...
Listing './lib/python3.5/site-packages/diffpy/Structure/tests/testdata'...
Listing './lib/python3.5/site-packages/diffpy.Structure-1.3.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
